--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,7 @@
 @import "../node_modules/antd/dist/antd.css";
 
 .App {
-  padding: 24px;
-}
-
-ul,
-ul > li {
-  list-style: none;
-}
-
-li > h2 > *,
-li > h3 > * {
-  line-height: 48px;
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 24px;
+  min-height: 100%;
 }
 
 .map {
